# AnyMusicBot

./: .env.example  .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yml  pyproject.toml
anymusicbot/: __init__.py  common.py
anymusicbot/handlers/: __init__.py
anymusicbot/handlers/initialize/: __init__.py
bot/: __init__.py  common.py
bot/callbacks/: __init__.py  full_menu.py  on_home.py  settings.py
bot/callbacks/factories/: full_menu.py
bot/factories/: full_menu.py  open_setting.py
bot/filters/: __init__.py  search.py  url.py
bot/handlers/: __init__.py
bot/handlers/initialize/: initializer.py
bot/handlers/inline_default/: __init__.py  on_inline_default.py
bot/handlers/inline_empty/: __init__.py  on_inline_empty.py
bot/handlers/inline_error/: __init__.py  on_inline_error_info.py
bot/handlers/inline_song/: __init__.py  on_inline_deezer.py  on_inline_soundcloud.py  on_inline_spotify.py  on_inline_youtube.py
bot/handlers/inline_url/: __init__.py  on_inline_url.py
bot/handlers/on_chosen/: __init__.py  deezer.py  recode_cached.py  soundcloud.py  spotify.py  suppress_verify.py  youtube.py
bot/keyboards/inline/: full_menu.py  search_variants.py  setting.py  settings.py
bot/markups/deezer/: search.py
bot/markups/spotify/: search.py
bot/middlewares/: __init__.py  inject_settings.py  private_button.py  save_chosen.py
bot/modules/common/song/: __init__.py  song.py
bot/modules/database/: __init__.py  db.py  db_model.py  meta.py  pull_db.py
bot/modules/deezer/: __init__.py  deezer.py  downloader.py  driver.py  engine.py  song.py  track_formats.py  util.py
bot/modules/error/: __init__.py  handler.py  pretty.py
bot/modules/fsm/: __init__.py  in_db.py
bot/modules/settings/: __init__.py  model.py
bot/modules/soundcloud/: __init__.py  downloader.py  driver.py  engine.py  song.py  soundcloud.py
bot/modules/spotify/: __init__.py  song.py  spotify.py
bot/modules/url/: __init__.py  id_getter.py  recognise.py
bot/modules/youtube/: __init__.py  downloader.py  song.py  youtube.py
bot/results/common/: search.py
bot/results/deezer/: __init__.py  search.py
bot/results/error/: __init__.py  error.py
bot/results/soundcloud/: __init__.py  search.py
bot/results/spotify/: __init__.py  search.py
bot/results/url/: __init__.py  url.py
bot/results/youtube/: __init__.py  search.py
bot/utils/: env.py
bot/utils/config/: __init__.py  _config.py
lib/ShazamIO/: README.md  pyproject.toml
lib/ShazamIO/shazamio/: __init__.py  algorithm.py  api.py  client.py  factory_misc.py  misc.py  serializers.py  signature.py  utils.py
lib/ShazamIO/shazamio/schemas/: artists.py  base.py  models.py
lib/ShazamIO/shazamio/schemas/artist/views/: full_albums.py  last_release.py  simular_artists.py  top_music.py  top_song.py
lib/pytube/: pyproject.toml
lib/pytube/pytube/: cipher.py
