[tool.poetry]
name = "anymusicbot"
version = "0.1.0"
description = ""
authors = ["BarsTiger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
rich = "^13.6.0"
py-deezer = "^1.1.4.post1"
shazamio = { path = "lib/ShazamIO" }
sqlitedict = "^2.1.0"
spotipy = "^2.23.0"
attrs = "^23.1.0"
ytmusicapi = "^1.3.1"
pytube = "^15.0.0"
pydub = "^0.25.1"
aiohttp = "^3.8.6"
nest-asyncio = "^1.5.8"
icecream = "^2.1.3"
m3u8 = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
