[tool.poetry]
name = "pytube"
version = "15.0.1"
description = "Python 3 library for downloading YouTube Videos."
authors = ["Ronnie Ghose", "Taylor Fox Dahlin", "Nick Ficano"]
license = "The Unlicense (Unlicense)"
keywords = ["youtube", "download", "video", "stream",]
readme = "README.md"
homepage = "https://pytube.io"
repository = "https://github.com/pytube/pytube"

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
